--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "axios": "^0.24.0"
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
+    "react": "^17.0.2",
+    "stripe-checkout": "^1.0.9"
   }
 }
