--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "admin": "^1.4.1",
     "axios": "^0.24.0",
+    "create-react-app": "^4.0.3",
     "react": "^17.0.2",
     "stripe-checkout": "^1.0.9"
   }
